<resources>
    <string name="app_name">GoodsTracker</string>
    <string name="retrofit_logging_request">Sending request %s on %s%n%s%s</string>
    <string name="retrofit_request_method_type"> Method </string>
    <string name="retrofit_logging_response">Received response for %s in %.1fms%n%s</string>
    <string name="enter_username">Enter userId</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login to</string>
    <string name="goodsTracker">GoodsTracker</string>
    <string name="enter_details">Please enter your details.</string>
    <string name="do_not_have_account">Do not have account?</string>
    <string name="create_account">Create account</string>
    <string name="forgot_password">Forget Password?</string>
    <string name="welcome_back">Welcome\nBack!</string>
    <string name="features">Features</string>
    <string name="scan_qr_code">Scan the QR code</string>
    <string name="scan_item">Scan Item</string>
    <string name="update_item">Update Item</string>
    <string name="cancel">Cancel</string>
    <string name="scan_item_product">Scan code on goods</string>
    <string name="add_or_update_product">Add or update product</string>
    <string name="add_product">Add Product</string>
    <string name="add_product_details">Add your product details</string>
    <string name="enter_location">Enter item location</string>
    <string name="enter_batch_no">Enter item batch number</string>
    <string name="enter_expiry_date">Enter item expiry date</string>
    <string name="enter_mfg_date">Enter item mfg date</string>
    <string name="enter_quantity">Enter item quantity</string>
    <string name="your_products">Your Products</string>
    <string name="update_products">Update Product</string>
    <string name="update_product_details">Update your product details</string>
    <string name="field_must_be_empty">Field must be empty</string>
    <string name="scan_product">Scan Goods</string>
    <string name="ok">OK</string>
    <string name="useYourBiometricsKey">Use your biometrics</string>
    <string name="unlockWithBiometricsTitleKey">Unlock with your biometric</string>
    <string name="unlockWithBiometricsSubtitleKey">Use your fingerprint or your face unlock to unlock the app with ease.</string>
    <string name="confirmYourBiometricsKey">Confirm your biometrics</string>
    <string name="cancelKey">Cancel</string>
    <string name="business">Business</string>
    <string name="warehouse">Warehouse</string>
    <string name="place_carton">Place Carton</string>
    <string name="addCarton">Place carton</string>
    <string name="racks">Racks</string>
    <string name="shelfs">Shelfs</string>
    <string name="pallets">Pallets</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="addWarehouse">Add Warehouse</string>
    <string name="tap">Add Warehouse</string>
    <string name="done">Done</string>
    <string name="update_warehouse">Update warehouse details</string>
    <string name="update_rack">Update racks details</string>
    <string name="update_shelf">Update shelf details</string>
    <string name="update_pallet">Update pallet details</string>
    <string name="add_shelf">Add shelf</string>
    <string name="cap_shelf">Shelf Capacity</string>
    <string name="add_rack">Add rack</string>
    <string name="add_pallet">Add pallet</string>
    <string name="cap_pallet">Pallet Capacity</string>
    <string name="master">Master</string>
    <string name="scan_pallet">Scan your pallet code</string>
    <string name="update_pallet_code">Or update pallet code</string>
    <string name="click_here_to_scan">Click here to scan</string>
    <string name="scan_carton">Scan Carton Code</string>
    <string name="carton_number">Carton number</string>
    <string name="analytical_number">Analytical Number</string>
    <string name="size">Size</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="details">Details</string>
    <string name="addWH">Please add warehouse to location</string>
    <string name="mName_or_AnaNo">Enter material name or analytical no.</string>
    <string name="search_manual">Search manually</string>
    <string name="search_scan">Search by scan</string>
    <string name="unplaced_cartons">Total unplaced cartons are :</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>