<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ScannerActivity"
    android:background="@color/md_theme_dark_background">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backBtn"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:src="@drawable/white_back_btn" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/scanHeaderTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/backBtn"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/scan_product"
        android:textColor="@color/white"
        android:textSize="@dimen/_25ssp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/scanCont"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/scanHeaderTv"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_rounded_bg"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/scanOptionCont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_80sdp"
            android:orientation="vertical"
            android:visibility="visible">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/scanBtn"
                android:layout_width="@dimen/_320sdp"
                android:layout_height="@dimen/_320sdp"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/qr_anim" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/scanTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/amiko"
                android:text="@string/scan_item_product"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/manualOptionCont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_100sdp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:fontFamily="@font/amiko"
                android:text="Manual Search"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/numOrMatNameTV"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/hover_click_editext_bg"
                android:drawableStart="@drawable/edit_icon"
                android:textAllCaps="true"
                android:drawablePadding="@dimen/_15sdp"
                android:drawableTint="@color/dark_hollow_black"
                android:hint="@string/mName_or_AnaNo"
                android:paddingStart="@dimen/_20sdp"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/searchBtn"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@drawable/hollow_black_rounded_bg"
                android:fontFamily="@font/amiko"
                android:gravity="center"
                android:text="Search"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/loginBtn"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_120sdp"
        android:backgroundTint="@color/white"
        android:src="@drawable/login" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/searchManualTV"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/hollow_black_top_rounded_corner"
        android:elevation="@dimen/_15sdp"
        android:orientation="vertical"
        android:visibility="visible">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/byManuallyTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/amiko"
            android:text="@string/search_manual"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            app:fontFamily="@font/amiko"
            app:textAllCaps="true" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/searchScanTV"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/hollow_black_top_rounded_corner"
        android:elevation="@dimen/_10sdp"
        android:orientation="vertical"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/byScanTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/amiko"
            android:text="@string/search_scan"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            app:fontFamily="@font/amiko"
            app:textAllCaps="true" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>