<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/royal_blue">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/royal_blue"
        app:menu="@menu/drawer_menu" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/userNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:fontFamily="@font/amiko"
        android:text="User name"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"  />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/userDesignTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userNameTV"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:fontFamily="@font/amiko"
        android:text="Dept name"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="19dp"
        android:fontFamily="@font/amiko"
        android:text="Login At"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/loginTimeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/amiko"
        android:layout_below="@+id/loginText"
        android:text="Time value"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/loginTimeTV"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/top_rounded_white_bg">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/amiko"
                android:text="@string/scan_pallet"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/clickHereTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:fontFamily="@font/amiko"
                android:text="@string/click_here_to_scan"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/scanBtn"
                android:layout_width="@dimen/_350sdp"
                android:layout_height="@dimen/_300sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/grey_stroke_white_rounded_bg"
                android:padding="@dimen/_10sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/qr_code"
                android:tint="@color/dark_grey" />

            <SurfaceView
                android:id="@+id/cameraSurfaceView"
                android:layout_width="@dimen/_350sdp"
                android:layout_height="@dimen/_300sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/stopCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/blue_rounded_bg"
                android:gravity="center"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="Stop camera"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/amiko"
                android:text="@string/update_pallet_code"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/blue_rounded_bg"
                android:elevation="@dimen/_5sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/amiko"
                    android:text="@string/update"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>